--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 04:56</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 04:57</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -46,19 +46,19 @@ body {
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>10km/h</td>
+              <td>11km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>354&deg; (NNW)</td>
+              <td>85&deg; (E)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>12.2mm/h</td>
+              <td>13.4mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1002.4hPa</td>
+              <td>1002.7hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
