--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 05:00</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 05:01</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -42,23 +42,23 @@ body {
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>94%</td>
+              <td>95%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>24km/h</td>
+              <td>10km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>57&deg; (ENE)</td>
+              <td>47&deg; (NE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>11.0mm/h</td>
+              <td>11.6mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1002.7hPa</td>
+              <td>1002.4hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
