--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 05:02</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 05:03</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -42,19 +42,19 @@ body {
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>95%</td>
+              <td>94%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>14km/h</td>
+              <td>23km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>354&deg; (NNW)</td>
+              <td>309&deg; (NW)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>11.6mm/h</td>
+              <td>7.4mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
