--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 07:45</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 07:46</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -50,11 +50,11 @@ body {
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>11&deg; (NNW)</td>
+              <td>24&deg; (NNE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>6.0mm/h</td>
+              <td>4.0mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
