--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 11:41</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 11:42</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -46,15 +46,15 @@ body {
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>3km/h</td>
+              <td>5km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>359&deg; (NNW)</td>
+              <td>33&deg; (NNE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>5.8mm/h</td>
+              <td>5.2mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
@@ -62,11 +62,11 @@ body {
             </tr>
             <tr>
               <td>UV Index</td>
-              <td>0.0</td>
+              <td>1.1</td>
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>53W/m<sup>2</sup></td>
+              <td>76W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
