--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 11:48</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 11:49</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -42,19 +42,19 @@ body {
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>91%</td>
+              <td>92%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>3km/h</td>
+              <td>6km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>306&deg; (NW)</td>
+              <td>30&deg; (NNE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>1.8mm/h</td>
+              <td>1.6mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
@@ -62,11 +62,11 @@ body {
             </tr>
             <tr>
               <td>UV Index</td>
-              <td>1.8</td>
+              <td>1.4</td>
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>137W/m<sup>2</sup></td>
+              <td>121W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
