--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 12:50</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 12:51</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,23 +38,23 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>26.5&deg;C</td>
+              <td>26.4&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>91%</td>
+              <td>90%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>2km/h</td>
+              <td>16km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>32&deg; (NNE)</td>
+              <td>108&deg; (ESE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
-              <td>1.6mm/h</td>
+              <td>1.4mm/h</td>
             </tr>
             <tr>
               <td>Pressure</td>
@@ -62,11 +62,11 @@ body {
             </tr>
             <tr>
               <td>UV Index</td>
-              <td>1.5</td>
+              <td>1.8</td>
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>111W/m<sup>2</sup></td>
+              <td>132W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
