--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 13:41</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 13:42</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -42,7 +42,7 @@ body {
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>89%</td>
+              <td>90%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
@@ -50,7 +50,7 @@ body {
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>154&deg; (SSE)</td>
+              <td>4&deg; (NNW)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -58,15 +58,15 @@ body {
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1007.1hPa</td>
+              <td>1007.5hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
-              <td>1.3</td>
+              <td>1.4</td>
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>102W/m<sup>2</sup></td>
+              <td>111W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
