--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 14:01</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 14:02</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -50,7 +50,7 @@ body {
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>342&deg; (NW)</td>
+              <td>135&deg; (SE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -58,15 +58,15 @@ body {
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1007.1hPa</td>
+              <td>1006.8hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
-              <td>2.0</td>
+              <td>2.1</td>
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>156W/m<sup>2</sup></td>
+              <td>169W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
