--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">19 Aug 2020, 15:46</h3><br>
+      <br><br><h3 class="wx-center">19 Aug 2020, 15:47</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -50,7 +50,7 @@ body {
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>349&deg; (NNW)</td>
+              <td>334&deg; (NW)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -58,7 +58,7 @@ body {
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1006.4hPa</td>
+              <td>1006.8hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
@@ -66,7 +66,7 @@ body {
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>137W/m<sup>2</sup></td>
+              <td>144W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
