--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">20 Aug 2020, 11:35</h3><br>
+      <br><br><h3 class="wx-center">20 Aug 2020, 11:36</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -42,15 +42,15 @@ body {
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>87%</td>
+              <td>84%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>3km/h</td>
+              <td>6km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>21&deg; (NNE)</td>
+              <td>45&deg; (NE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -58,11 +58,11 @@ body {
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1010.2hPa</td>
+              <td>1009.8hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
-              <td>9.3</td>
+              <td>9.2</td>
             </tr>
             <tr>
               <td>Solar Radiation</td>
