--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">05 Nov 2020, 12:35</h3><br>
+      <br><br><h3 class="wx-center">05 Nov 2020, 12:36</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -42,15 +42,15 @@ body {
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>66%</td>
+              <td>67%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>10km/h</td>
+              <td>14km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>21&deg; (NNE)</td>
+              <td>67&deg; (ENE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -58,11 +58,11 @@ body {
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1017.6hPa</td>
+              <td>1017.9hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
-              <td>3.1</td>
+              <td>2.3</td>
             </tr>
             <tr>
               <td>Solar Radiation</td>
