--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">05 Nov 2020, 14:44</h3><br>
+      <br><br><h3 class="wx-center">05 Nov 2020, 14:45</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -46,11 +46,11 @@ body {
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>11km/h</td>
+              <td>5km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>19&deg; (NNE)</td>
+              <td>308&deg; (NW)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -58,15 +58,15 @@ body {
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1016.3hPa</td>
+              <td>1015.9hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
-              <td>2.0</td>
+              <td>1.7</td>
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>446W/m<sup>2</sup></td>
+              <td>362W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
