--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">05 Nov 2020, 14:49</h3><br>
+      <br><br><h3 class="wx-center">05 Nov 2020, 14:50</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -42,15 +42,15 @@ body {
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>66%</td>
+              <td>67%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>5km/h</td>
+              <td>10km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>21&deg; (NNE)</td>
+              <td>36&deg; (NE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -62,11 +62,11 @@ body {
             </tr>
             <tr>
               <td>UV Index</td>
-              <td>1.5</td>
+              <td>1.4</td>
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>258W/m<sup>2</sup></td>
+              <td>450W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
