--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">06 Nov 2020, 07:43</h3><br>
+      <br><br><h3 class="wx-center">06 Nov 2020, 07:44</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,11 +38,11 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>21.5&deg;C</td>
+              <td>21.6&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>83%</td>
+              <td>82%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
@@ -50,7 +50,7 @@ body {
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>16&deg; (NNE)</td>
+              <td>312&deg; (NW)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -66,7 +66,7 @@ body {
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>42W/m<sup>2</sup></td>
+              <td>58W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
