--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">06 Nov 2020, 08:16</h3><br>
+      <br><br><h3 class="wx-center">06 Nov 2020, 08:17</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,11 +38,11 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>23.0&deg;C</td>
+              <td>23.1&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>75%</td>
+              <td>76%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
@@ -50,7 +50,7 @@ body {
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>145&deg; (SE)</td>
+              <td>10&deg; (NNW)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -66,7 +66,7 @@ body {
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>218W/m<sup>2</sup></td>
+              <td>221W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
