--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">06 Nov 2020, 08:20</h3><br>
+      <br><br><h3 class="wx-center">06 Nov 2020, 08:21</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,7 +38,7 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>23.2&deg;C</td>
+              <td>23.3&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
@@ -50,7 +50,7 @@ body {
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>44&deg; (NE)</td>
+              <td>70&deg; (ENE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -66,7 +66,7 @@ body {
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>230W/m<sup>2</sup></td>
+              <td>239W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
