--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">06 Nov 2020, 13:07</h3><br>
+      <br><br><h3 class="wx-center">06 Nov 2020, 13:08</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,19 +38,19 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>27.9&deg;C</td>
+              <td>28.0&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>51%</td>
+              <td>50%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>5km/h</td>
+              <td>8km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>30&deg; (NNE)</td>
+              <td>66&deg; (ENE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -58,15 +58,15 @@ body {
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1015.2hPa</td>
+              <td>1014.9hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
-              <td>2.3</td>
+              <td>3.0</td>
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>548W/m<sup>2</sup></td>
+              <td>587W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
