--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">06 Nov 2020, 13:19</h3><br>
+      <br><br><h3 class="wx-center">06 Nov 2020, 13:20</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -42,15 +42,15 @@ body {
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>50%</td>
+              <td>51%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>8km/h</td>
+              <td>11km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>36&deg; (NE)</td>
+              <td>73&deg; (ENE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -58,15 +58,15 @@ body {
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1014.9hPa</td>
+              <td>1014.6hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
-              <td>2.8</td>
+              <td>2.7</td>
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>239W/m<sup>2</sup></td>
+              <td>332W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
