--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">06 Nov 2020, 15:19</h3><br>
+      <br><br><h3 class="wx-center">06 Nov 2020, 15:20</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,11 +38,11 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>28.3&deg;C</td>
+              <td>28.2&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>62%</td>
+              <td>63%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
@@ -50,7 +50,7 @@ body {
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>300&deg; (WNW)</td>
+              <td>263&deg; (W)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -62,11 +62,11 @@ body {
             </tr>
             <tr>
               <td>UV Index</td>
-              <td>1.1</td>
+              <td>1.0</td>
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>387W/m<sup>2</sup></td>
+              <td>376W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
