--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">07 Nov 2020, 09:39</h3><br>
+      <br><br><h3 class="wx-center">07 Nov 2020, 09:40</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,7 +38,7 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>28.2&deg;C</td>
+              <td>28.1&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
@@ -46,11 +46,11 @@ body {
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>6km/h</td>
+              <td>3km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>289&deg; (WNW)</td>
+              <td>87&deg; (E)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -66,7 +66,7 @@ body {
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>499W/m<sup>2</sup></td>
+              <td>501W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
