--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">07 Nov 2020, 10:09</h3><br>
+      <br><br><h3 class="wx-center">07 Nov 2020, 10:10</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,11 +38,11 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>29.6&deg;C</td>
+              <td>29.7&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>50%</td>
+              <td>49%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
@@ -50,7 +50,7 @@ body {
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>290&deg; (WNW)</td>
+              <td>90&deg; (E)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -62,11 +62,11 @@ body {
             </tr>
             <tr>
               <td>UV Index</td>
-              <td>2.9</td>
+              <td>3.0</td>
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>573W/m<sup>2</sup></td>
+              <td>575W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
