--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">07 Nov 2020, 11:10</h3><br>
+      <br><br><h3 class="wx-center">07 Nov 2020, 11:11</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,11 +38,11 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>29.4&deg;C</td>
+              <td>29.5&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>53%</td>
+              <td>54%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
@@ -50,7 +50,7 @@ body {
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>236&deg; (SW)</td>
+              <td>248&deg; (WSW)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -66,7 +66,7 @@ body {
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>679W/m<sup>2</sup></td>
+              <td>680W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
