--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">07 Nov 2020, 11:11</h3><br>
+      <br><br><h3 class="wx-center">07 Nov 2020, 11:12</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -42,7 +42,7 @@ body {
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>54%</td>
+              <td>53%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
@@ -50,7 +50,7 @@ body {
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>248&deg; (WSW)</td>
+              <td>324&deg; (NW)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -62,11 +62,11 @@ body {
             </tr>
             <tr>
               <td>UV Index</td>
-              <td>4.1</td>
+              <td>4.2</td>
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>680W/m<sup>2</sup></td>
+              <td>686W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
