--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">07 Nov 2020, 11:14</h3><br>
+      <br><br><h3 class="wx-center">07 Nov 2020, 11:15</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,19 +38,19 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>29.6&deg;C</td>
+              <td>29.7&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>52%</td>
+              <td>50%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>3km/h</td>
+              <td>2km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>85&deg; (E)</td>
+              <td>105&deg; (ESE)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
