--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">07 Nov 2020, 14:58</h3><br>
+      <br><br><h3 class="wx-center">07 Nov 2020, 14:59</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -42,15 +42,15 @@ body {
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>50%</td>
+              <td>51%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
-              <td>5km/h</td>
+              <td>2km/h</td>
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>32&deg; (NNE)</td>
+              <td>340&deg; (NW)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -62,11 +62,11 @@ body {
             </tr>
             <tr>
               <td>UV Index</td>
-              <td>1.7</td>
+              <td>1.6</td>
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>476W/m<sup>2</sup></td>
+              <td>471W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
