--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ body {
      <img src="./thei.png" class="wx-round wx-image" width="450">
     </div>
     <div class="wx-col m6 wx-padding-large">
-      <br><br><h3 class="wx-center">07 Nov 2020, 15:34</h3><br>
+      <br><br><h3 class="wx-center">07 Nov 2020, 15:35</h3><br>
       <div class="bgimg wx-display-container wx-text-dark-grey">
        <!-- set font size h5 -->
        <h5>
@@ -38,11 +38,11 @@ body {
           <table class="wx-table wx-bordered">
             <tr>
               <td>Temperature</td>
-              <td>30.1&deg;C</td>
+              <td>30.2&deg;C</td>
             </tr>
             <tr>
               <td>Humidity</td>
-              <td>52%</td>
+              <td>53%</td>
             </tr>
             <tr>
               <td>Wind Speed</td>
@@ -50,7 +50,7 @@ body {
             </tr>
             <tr>
               <td>Wind Direction</td>
-              <td>27&deg; (NNE)</td>
+              <td>9&deg; (NNW)</td>
             </tr>
             <tr>
               <td>Rain Rate</td>
@@ -58,7 +58,7 @@ body {
             </tr>
             <tr>
               <td>Pressure</td>
-              <td>1013.9hPa</td>
+              <td>1014.2hPa</td>
             </tr>
             <tr>
               <td>UV Index</td>
@@ -66,7 +66,7 @@ body {
             </tr>
             <tr>
               <td>Solar Radiation</td>
-              <td>373W/m<sup>2</sup></td>
+              <td>367W/m<sup>2</sup></td>
             </tr>
           </table>
         </div>
